Reorder CSS and fix fontAwesome optimizeLegibility

--- a/styles/order1/topcoat-mobile-light.css
+++ b/styles/order1/topcoat-mobile-light.css
@@ -8,7 +8,6 @@ body {
 
 	font: 16px "Helvetica NeueUI", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 200;
-  text-rendering: optimizeLegibility;
 }
 
 .topcoat-icon--menu-stack {
