--- a/styles/order2/aside.css
+++ b/styles/order2/aside.css
@@ -23,8 +23,7 @@
 
   left: 0px;
 
-
-  width: 60%;
+  width: 200px;
 }
 
 
@@ -45,6 +44,6 @@
 
 
 .aside-container.is-aside-left > .aside-front {
-  -webkit-transform:translate3d(60%,0,0);
+  -webkit-transform:translate3d(200px,0,0);
 }
 
