--- a/styles/order2/landing.css
+++ b/styles/order2/landing.css
@@ -1,25 +1,21 @@
 
 
-#init-app {
-
-	position:absolute; 
-	width: 100%;
-	height: 100%;
-	top:0px; bottom:0px; left:0;
-	overflow: hidden;
-
-}
-
 
 .category-item {
   padding-top: 0.75em;
   padding-bottom: 0.75em;
 }
 
-.category-item.is-selected, .category-item.is-active {
+.category-item:active, .category-item.is-selected, .category-item.is-active {
 
    background-color: #BBBEBB;
    font-weight: bold;
+
+}
+
+.event-item:active {
+
+   background-color: #BBBEBB;
 
 }
 
@@ -64,48 +60,3 @@
   -webkit-animation: fadeIn 0.5s;
 }
 
-.header {
-  position: relative;
-
-}
-
-.header-block {
-  display: table-cell;
-  vertical-align: middle;
-  height: 3.9000000000000004rem;
-}
-.header-block.is-right, .header-block.is-left {
-}
-
-.header-block.is-middle {
-  width: 100%;
-}
-
-.header-button {
-
-  font-size: 1.5em;
-}
-
-.header-button.is-left {
-  float: left;
-  margin-left: 10px;
-}
-
-.header-button.is-right {
-
-  float: right;
-  margin-right: 10px;
-}
-
-
-.logo-header {
-
-  background-image: url('../img2/header_logo.png');
-  width: 200px;
-  height: 48px;
-
-  background-size: 200px 48px;
-
-  margin: 0 auto;
-
-}
